# python-cloud-functions-workspace

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  setup_gcp_deployment.py
.github/workflows/: deploy-cloud-function.yml
libs/api/: pyproject.toml
libs/api/api/: main.py
libs/api/api/routes/: documents.py  hello.py
libs/core/: pyproject.toml
libs/core/core/: __init__.py  models.py  text.py
services/api-function/: main.py  pyproject.toml
