[project]
name = "api"
version = "0.1.0"
description = "FastAPI library for the monorepo"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.1",
    "pydantic>=2.0.0",
    "uvicorn[standard]>=0.24.0",
    "core",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
core = { workspace = true }

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
