[project]
name = "api-function"
version = "0.1.0"
description = "Google Cloud Function deployment for the API library"
requires-python = ">=3.12"
dependencies = [
    "functions-framework>=3.5.0",
    "httpx>=0.27.0",  # Required by TestClient
    "api",
]

[tool.uv.sources]
api = { workspace = true }
core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
